Closed Bug 849067 Opened 11 years ago Closed 11 years ago

gstreamer builds broken again by 834172

Categories

(Core :: Audio/Video, defect)

All
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: johns, Assigned: johns)

References

Details

Attachments

(1 file)

Stop it!
(In reply to Chris Pearce (:cpearce) from bug 834172 comment #22)
> I haven't tested this, but it should work.

ಠ_ಠ
Attachment #722577 - Flags: review?(cpearce)
Attachment #722577 - Flags: review?(cpearce) → review+
https://hg.mozilla.org/mozilla-central/rev/754d17e292ea
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: