Bug 849067 - Unbreak gstreamer builds again. r=cpearce